hphp/hack/test/typecheck/reactive/rx_indexing2.php.coeffects.exp
File "rx_indexing2.php", line 7, characters 3-14:
Assigning to an element of a Hack Collection object via `[]` requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "rx_indexing2.php", line 5, characters 30-31:
  The local (enclosing) context provides the capability set {}
